--- a/TestTableaux.ipynb
+++ b/TestTableaux.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -88,19 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valeur à l'indice 4 -> 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tab[0]= 2 ;\n",
     "System.out.println(\"valeur à l'indice 4 -> \" +  tab[4] ) ; // affiche valeur à l'indice 4 -> 0"
@@ -115,22 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "EvalException",
-     "evalue": "5",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1m\u001b[31mjava.lang.ArrayIndexOutOfBoundsException: 5\u001b[0m",
-      "\u001b[1m\u001b[31m\tat .(#20:1)\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tab[5] = 45 ;   // Que se passe-t-il ?"
    ]
@@ -145,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -166,23 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valeur : 0\n",
-      "valeur : 2\n",
-      "valeur : 4\n",
-      "valeur : 6\n",
-      "valeur : 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (int valeur : tab) {\n",
     "    System.out.println(\"valeur : \" + valeur);\n",
@@ -205,24 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valeur : null\n",
-      "valeur : null\n",
-      "valeur : null\n",
-      "valeur : null\n",
-      "valeur : null\n",
-      "valeur : null\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int n = 6; // tableau dont la taille est une variable !\n",
     "CompteEnBanque[] tabDeComptes = new CompteEnBanque[n];\n",
@@ -242,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -297,19 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Au total, 7 objets compte ont été alloués depuis le lancement du programme\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int nbAlloues = CompteEnBanque.getNbInstances(); // méthode static => on peut utiliser le nom de la classe\n",
     "System.out.println(\"Au total, \" + nbAlloues + \" objets compte ont été alloués depuis le lancement du programme\");"
@@ -327,22 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "int[][] tab2D;\n",
     "tab2D = new int[5][]; // tab de 5 références null\n",
@@ -363,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -393,28 +330,16 @@
    "metadata": {},
    "source": [
     "### Tri\n",
-    "Utilisation de la _méthode de classe_ `sort()` de la classe `Arrays` qui implémente l'algorithme \"quicksort\" => en $O(n \\log(n) )$"
+    "* Utilisation de la _méthode de classe_ `sort()` de la classe `Arrays` qui implémente l'algorithme \"quicksort\" => en $O(n \\log(n) )$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valeur triées : 92\n",
-      "valeur triées : 123\n",
-      "valeur triées : 199\n",
-      "valeur triées : 507\n",
-      "valeur triées : 858\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Arrays.sort(vec);\n",
     "for (int valeur : vec) {\n",
@@ -433,19 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "500 n’est pas dans le tableau\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int pos = Arrays.binarySearch(vec, 500);\n",
     "if( pos >= 0 )\n",
@@ -458,28 +375,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Copie, \n",
-    "avec la _méthode de classe_ `copyOf()` de la classe `Arrays`"
+    "### Copie\n",
+    "* avec la _méthode de classe_ `copyOf()` de la classe `Arrays`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "int[] vec2 = Arrays.copyOf(vec, vec.length);\n",
     "vec2[3] = 5;"
